[workspace]
members = [
    "contracts",
    "lang",
]

exclude = [
    "examples",
    "example_project_structure",
    "mocks"
]

[package]
name = "openbrush"
version= "4.0.0-beta.1"
authors = ["Brushfam <green@727.ventures>"]
edition = "2018"

license = "MIT"
readme = "README.md"
repository = "https://github.com/Brushfam/openbrush-contracts"
documentation = "https://learn.brushfam.io/docs/openbrush"
homepage = "https://brushfam.io/"
description = "OpenBrush library for smart contract development on ink!."
keywords = ["wasm", "brushfam", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink = { version = "5.0.0-alpha", default-features = false }
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"] }

openbrush_contracts = { version = "~4.0.0-beta.1", path = "contracts", default-features = false }
openbrush_lang = { version = "~4.0.0-beta.1", path = "lang", default-features = false }

[lib]
name = "openbrush"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[dev-dependencies]
ink_env = "5.0.0-alpha"
trybuild = "1.0.80"
ink_e2e = "5.0.0-alpha"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush_contracts/std",
    "openbrush_lang/std",
]
psp22 = ["openbrush_contracts/psp22"]
psp34 = ["openbrush_contracts/psp34"]
psp37 = ["openbrush_contracts/psp37"]
access_control = ["openbrush_contracts/access_control"]
ownable = ["openbrush_contracts/ownable"]
payment_splitter = ["openbrush_contracts/payment_splitter"]
reentrancy_guard = ["openbrush_contracts/reentrancy_guard"]
pausable = ["openbrush_contracts/pausable"]
timelock_controller = ["openbrush_contracts/timelock_controller"]
proxy = ["openbrush_contracts/proxy"]
diamond = ["openbrush_contracts/diamond"]
upgradeable = ["openbrush_contracts/upgradeable"]
governance = ["openbrush_contracts/governance", "openbrush_contracts/checkpoints"]
crypto = ["openbrush_contracts/crypto"]
nonces = ["openbrush_contracts/nonces"]
checkpoints = ["openbrush_contracts/checkpoints"]
psp61 = ["openbrush_contracts/psp61"]

test-all = [
    "psp22",
    "psp34",
    "psp37",
    "access_control",
    "ownable",
    "payment_splitter",
    "reentrancy_guard",
    "pausable",
    "timelock_controller",
    "proxy",
    "diamond",
    "governance",
    "crypto",
    "nonces",
    "checkpoints"
]

[profile.release]
panic = "abort"
lto = false

[profile.dev]
panic = "abort"
lto = false
overflow-checks = false