[package]
name = "openbrush_contracts"
version = "3.1.1"
authors = ["Brushfam <green@727.ventures>"]
edition = "2021"

license = "MIT"
readme = "README.md"
repository = "https://github.com/Brushfam/openbrush-contracts"
documentation = "https://docs.openbrush.io"
homepage = "https://727.ventures"
description = "Reusable implementations of contracts and traits for interaction with them."
keywords = ["wasm", "brushfam", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink = { version = "4.2.1", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

openbrush = { version = "~3.1.1", package = "openbrush_lang", path = "../lang", default-features = false }

pallet-assets-chain-extension = { git = "https://github.com/Brushfam/pallet-assets-chain-extension", branch = "polkadot-v0.9.37", default-features = false, features = ["ink-lang"]  }

[lib]
name = "openbrush_contracts"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "pallet-assets-chain-extension/ink-std",
]
psp22 = []
psp22_pallet = []
psp34 = []
psp37 = []
access_control = []
ownable = []
payment_splitter = []
reentrancy_guard = []
pausable = []
psp61 = []
timelock_controller = [
    "access_control",
]
proxy = [
    "ownable",
]
diamond = [
    "ownable",
]
upgradeable = ["ownable"]
test-all = [
    "psp22",
    "psp34",
    "psp37",
    "access_control",
    "ownable",
    "payment_splitter",
    "reentrancy_guard",
    "pausable",
    "timelock_controller",
    "proxy",
    "diamond",
]