[package]
name = "openbrush_contracts"
version= "4.0.0-beta"
authors = ["Brushfam <green@727.ventures>"]
edition = "2021"

license = "MIT"
readme = "README.md"
repository = "https://github.com/Brushfam/openbrush-contracts"
documentation = "https://learn.brushfam.io/docs/openbrush"
homepage = "https://brushfam.io/"
description = "Reusable implementations of contracts and traits for interaction with them."
keywords = ["wasm", "brushfam", "smart-contracts", "blockchain", "ink"]
categories = ["no-std", "embedded"]
include = ["Cargo.toml", "src/**/*.rs"]

[dependencies]
ink = { version = "4.2.1", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

openbrush = { version = "4.0.0-beta", package = "openbrush_lang", path = "../lang", default-features = false }

pallet-assets-chain-extension = { git = "https://github.com/Brushfam/pallet-assets-chain-extension", branch = "polkadot-v0.9.37", default-features = false, features = ["ink-lang"]  }

blake2 = "0.10.6"

secp256k1 = "0.27.0"

[lib]
name = "openbrush_contracts"
path = "src/lib.rs"
crate-type = [
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
    "pallet-assets-chain-extension/ink-std",
]
psp22 = []
psp22_pallet = []
psp34 = []
psp37 = []
access_control = []
ownable = []
payment_splitter = []
reentrancy_guard = []
pausable = []
governance = ["access_control"]
proxy = [
    "ownable",
]
diamond = [
    "ownable",
]
upgradeable = ["ownable"]
test-all = [
    "psp22",
    "psp34",
    "psp37",
    "access_control",
    "ownable",
    "payment_splitter",
    "reentrancy_guard",
    "pausable",
    "governance",
    "proxy",
    "diamond",
]