[package]
name = "my_psp61"
version = "3.1.1"
authors = ["Brushfam <varex.silver@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-alpha", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "../..", default-features = false, features = [
    "psp61",
    "ownable",
    "access_control",
    "pausable",
    "reentrancy_guard",
    "upgradeable",
    "payment_splitter"
] }

[dev-dependencies]
ink_e2e = "5.0.0-alpha"
test_helpers = { path = "../test_helpers", default-features = false }

[lib]
name = "my_psp61"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16