[package]
name = "my_psp22_metadata_facet"
version = "3.2.0"
authors = ["Brushfam <dominik.krizo@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.3", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "../../..", default-features = false, features = ["psp22", "ownable"] }

[lib]
name = "my_psp22_metadata_facet"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
