[package]
name = "my_psp22_permit"
version = "3.1.1"
authors = ["Brushfam <m.konstantinovna@727.ventures>"]
edition = "2021"

[dependencies]
ink = { git = "https://github.com/paritytech/ink", rev = "a71990f",  default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "../../..", default-features = false, features = ["psp22"] }
ecdsa = { version = "0.16.7", default-features = false, optional = true }

[dev-dependencies]
ink_e2e = "4.2.1"
test_helpers = { path = "../../test_helpers", default-features = false }
blake2 = { version = "0.10.6", default-features = false }

[lib]
name = "my_psp22_permit"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = [
    "ecdsa"
]

[profile.dev]
codegen-units = 16
