[package]
name = "my_psp22_permit"
version = "4.0.0-beta.1"
authors = ["Brushfam <artem.lech@brushfam.io>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-alpha", default-features = false}
scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "../../..", default-features = false, features = ["psp22"] }
ecdsa = { version = "0.16.7", default-features = false, optional = true }

[dev-dependencies]
ink_e2e = "5.0.0-alpha"
test_helpers = { path = "../../test_helpers", default-features = false }
subxt-signer = {version = "0.31.0", default-features = false, features = ["ecdsa"]}

[lib]
name = "my_psp22_permit"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
