[package]
name = "my_psp22_votes"
version= "4.0.0-beta.1"
authors = ["Brushfam <varex.silver@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "../../..", default-features = false, features = ["psp22", "governance"] }

[dev-dependencies]
ink_e2e = "4.2.1"
test_helpers = { path = "../../test_helpers", default-features = false }

[lib]
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
