[package]
name = "my_psp22_pallet_metadata"
version = "3.1.1"
authors = ["Brushfam <nameless.endless@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "4.2.1", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

# These dependencies
openbrush = { path = "../../..", default-features = false, features = ["psp22_pallet"] }

[dev-dependencies]
ink_e2e = "4.2.1"
test_helpers = { path = "../../test_helpers", default-features = false }
rand = "0.8.5"

[lib]
name = "my_psp22_pallet_metadata"
path = "lib.rs"
crate-type = [
    # Used for normal contract Wasm blobs.
    "cdylib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    # These dependencies
    "openbrush/std",
]
ink-as-dependency = []
e2e-tests = []

[profile.dev]
codegen-units = 16
