[package]
name = "flip_on_me"
version= "4.0.0-beta.1"
authors = ["Brushfam <green@727.ventures>"]
edition = "2021"

[dependencies]
ink = { version = "5.0.0-alpha", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }

flipper = { path = "../..", default-features = false }
openbrush = { path = "../../../..", default-features = false }

[lib]
name = "flip_on_me"
path = "lib.rs"


[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "flipper/std",
    "openbrush/std",
]
ink-as-dependency = []

[profile.dev]
codegen-units = 16
